Fix analytics widget - show real visitor stats from visitor.php

--- a/index.html
+++ b/index.html
@@ -675,8 +675,23 @@
                     <br>
                     <a href="#" id="footerAnalyticsSmall" class="footer-link" style="font-size:0.85rem; display:inline-block; margin-top:6px;" data-i18n="footer.analytics">Analiz</a>
                 </p>
-                <div class="analytics-badge" style="margin-top:0.5rem; text-align:center; width:100%;">
-                    <a href="#" id="analyticsLink" style="font-size:0.8rem; color:rgba(255,255,255,0.7); text-decoration:none;" data-i18n="footer.analytics">Analytics</a>
+                <div class="analytics-badge" style="margin-top:0.5rem; text-align:center; width:100%; padding:8px; background:rgba(255,255,255,0.05); border-radius:4px;">
+                    <div style="font-size:0.75rem; color:rgba(255,255,255,0.6); margin-bottom:4px;" data-i18n="footer.analytics">Analytics</div>
+                    <div style="display:flex; justify-content:space-around; font-size:0.85rem; color:rgba(255,255,255,0.9);">
+                        <div style="text-align:center;">
+                            <div style="font-weight:600;" id="totalVisitors">—</div>
+                            <div style="font-size:0.7rem; color:rgba(255,255,255,0.6);" data-i18n="totalVisitors">Toplam</div>
+                        </div>
+                        <div style="text-align:center;">
+                            <div style="font-weight:600;" id="todayVisitors">—</div>
+                            <div style="font-size:0.7rem; color:rgba(255,255,255,0.6);" data-i18n="todayVisitors">Bugün</div>
+                        </div>
+                        <div style="text-align:center;">
+                            <div style="font-weight:600;" id="pageViews">—</div>
+                            <div style="font-size:0.7rem; color:rgba(255,255,255,0.6);">Sayfa</div>
+                        </div>
+                    </div>
+                    <a href="#" id="analyticsLink" style="font-size:0.7rem; color:rgba(255,255,255,0.5); text-decoration:none; margin-top:4px; display:inline-block;" data-i18n="footer.analytics">Detay</a>
                 </div>
             </div>
         </div>
